force-app/main/default/objects/SX_LMS_User__c/SX_LMS_User__c.object-meta.xml
<CustomObject>
    <description>Master list of Schoox LMS learners</description>
    <label>SX LMS User</label>
    <nameField>
        <displayFormat>SLU-{0000}</displayFormat>
        <label>SX LMS User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SX LMS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>