force-app/main/default/objects/SX_LMS_User__c/fields/Contact_or_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_or_User_ID__c</fullName>
    <label>Contact or User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>