force-app/main/default/objects/SX_LMS_User__c/fields/Enrollments_Due_At__c.field-meta.xml
<CustomField>
    <fullName>Enrollments_Due_At__c</fullName>
    <label>Enrollments Due At</label>
    <type>DateTime</type>
</CustomField>