force-app/main/default/objects/SX_LMS_User__c/fields/LMS_User__c.field-meta.xml
<CustomField>
    <fullName>LMS_User__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&apos;Employee&apos;, HYPERLINK(&apos;/&apos; &amp; Id, SF_User__r.FirstName &amp; &apos; &apos; &amp; SF_User__r.LastName,&apos;_self&apos;),
HYPERLINK(&apos;/&apos; &amp; Id, SF_Contact__r.FirstName &amp; &apos; &apos; &amp; SF_Contact__r.LastName,&apos;_self&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMS User</label>
    <type>Text</type>
</CustomField>