force-app/main/default/objects/SX_LMS_User__c/fields/LMS_User_Name__c.field-meta.xml
<CustomField>
    <fullName>LMS_User_Name__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&apos;Employee&apos;, SF_User__r.FirstName &amp; &apos; &apos; &amp; SF_User__r.LastName,
SF_Contact__r.FirstName &amp; &apos; &apos; &amp; SF_Contact__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMS User Name</label>
    <type>Text</type>
</CustomField>