force-app/main/default/objects/SX_LMS_User__c/fields/SF_Contact__c.field-meta.xml
<CustomField>
    <fullName>SF_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SX LMS Users</relationshipLabel>
    <relationshipName>SX_LMS_Users</relationshipName>
    <type>Lookup</type>
</CustomField>