force-app/main/default/objects/SX_LMS_User__c/fields/SX_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SX_Activation_Date__c</fullName>
    <label>SX Activation Date</label>
    <type>Date</type>
</CustomField>