force-app/main/default/objects/SX_LMS_User__c/fields/SX_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>SX_Activation_Status__c</fullName>
    <label>SX Activation Status</label>
    <length>99</length>
    <type>Text</type>
</CustomField>