force-app/main/default/objects/SX_LMS_User__c/fields/SX_Course_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Completion_Rate__c</fullName>
    <formula>SX_Completed_Course_Count__c / SX_Enrollment_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Course Completion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>