force-app/main/default/objects/SX_LMS_User__c/fields/SX_Enrollment_Count__c.field-meta.xml
<CustomField>
    <fullName>SX_Enrollment_Count__c</fullName>
    <label>SX Enrollment Count</label>
    <summarizedField>SX_Enrollment__c.Enrollment_Counter__c</summarizedField>
    <summaryForeignKey>SX_Enrollment__c.Student_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>