force-app/main/default/objects/SX_LMS_User__c/fields/SX_Id__c.field-meta.xml
<CustomField>
    <fullName>SX_Id__c</fullName>
    <formula>SX_User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Id</label>
    <type>Text</type>
</CustomField>