force-app/main/default/objects/SX_LMS_User__c/fields/SX_Process_Pending__c.field-meta.xml
<CustomField>
    <fullName>SX_Process_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SX Process Pending</label>
    <type>Checkbox</type>
</CustomField>