force-app/main/default/objects/SX_LMS_User__c/fields/Synced_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Synced_Enrollments__c</fullName>
    <label>Synced_Enrollments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>passed</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>