force-app/main/default/objects/SX_LMS_User__c/recordTypes/Employee_SF_User.recordType-meta.xml
<RecordType>
    <fullName>Employee_SF_User</fullName>
    <active>true</active>
    <label>Employee</label>
</RecordType>