force-app/main/default/objects/SX_LMS_User__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <label>External</label>
</RecordType>