force-app/main/default/objects/SX_LMS_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_or_User_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LMS_User_Name__c</columns>
    <columns>SX_Activation_Date__c</columns>
    <columns>SX_Activation_Status__c</columns>
    <columns>SX_Id__c</columns>
    <columns>SX_User_ID__c</columns>
    <columns>SX_Active_User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>